# JTP

./: .ccls  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
cmake/modules/: FindGLFW3.cmake
dep/glad/: glad.h
dep/stb/: stb_image.h
inc/: game.h  jtp_assets.h  jtp_constants.h  jtp_game.h  jtp_math.h  jtp_nini.h  jtp_shader.h  jtp_shader_program.h  jtp_shapes2d.h  jtp_sprite.h  jtp_sprites.h  jtp_string.h  jtp_texture2d.h  jtp_timer.h  jtp_types.h  types.h
res/config/: test.nini
res/shaders/: default.frag  default.vert  primitive.vs  sprite.fs  sprite.vs
src/: game.c  glad.c  jtp_assets.c  jtp_game.c  jtp_math.c  jtp_nini.c  jtp_shader.c  jtp_shader_program.c  jtp_shapes2d.c  jtp_sprite.c  jtp_string.c  jtp_texture2d.c  jtp_timer.c  main.c  timer.c
